[package]
name = "me-rs"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.20"
log4rs = "1.2.0"
serde = { version = "1.0.189",features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.33.0",features = ["full"] }

